added autodetecting secret doors

--- a/gemrb/override/bg1/gemrb.ini
+++ b/gemrb/override/bg1/gemrb.ini
@@ -74,3 +74,5 @@ DeathOnZeroStat = 1
 BreakableWeapons = 1
 HasSpecificDamageBonus = 0
 CutsceneAreascripts = 1
+FlexibleWorldmap = 0
+AutoSearchHidden = 1
