--- a/gemrb/override/bg2/gemrb.ini
+++ b/gemrb/override/bg2/gemrb.ini
@@ -84,3 +84,5 @@ ProperBackstab = 1
 HasSpecificDamageBonus = 0
 StealIsAttack = 1
 CutsceneAreascripts = 0
+FlexibleWorldmap = 0
+AutoSearchHidden = 1
