--- a/gemrb/override/iwd/gemrb.ini
+++ b/gemrb/override/iwd/gemrb.ini
@@ -80,6 +80,7 @@ AreaVisitedVar = 1
 HasSpecificDamageBonus = 0
 BiographyIsRes = 1
 FlexibleWorldmap = 1
+AutoSearchHidden = 1
 
 [charset]
 CharCount = 31
