--- a/gemrb/override/iwd2/gemrb.ini
+++ b/gemrb/override/iwd2/gemrb.ini
@@ -91,3 +91,5 @@ HasSpecificDamageBonus = 1
 StrrefSaveGame = 1
 BiographyIsRes = 1
 CutsceneAreascripts = 0
+FlexibleWorldmap = 1
+AutoSearchHidden = 0
