--- a/gemrb/override/pst/gemrb.ini
+++ b/gemrb/override/pst/gemrb.ini
@@ -79,6 +79,7 @@ OverrideCursorPos = 1
 OnScreenText = 1
 HasSpecificDamageBonus = 0
 HasWisdomBonusTable = 1
+AutoSearchHidden = 1
 
 [charset]
 CharCount = 31
