--- a/gemrb/override/how/gemrb.ini
+++ b/gemrb/override/how/gemrb.ini
@@ -82,6 +82,7 @@ AreaVisitedVar = 1
 HasSpecificDamageBonus = 1
 BiographyIsRes = 1
 FlexibleWorldmap = 1
+AutoSearchHidden = 1
 
 [charset]
 CharCount = 31
