pst: implemented enoll eva's duplication - pst specific state flag that duplicates projectiles

--- a/gemrb/override/iwd/gemrb.ini
+++ b/gemrb/override/iwd/gemrb.ini
@@ -81,6 +81,8 @@ HasSpecificDamageBonus = 0
 BiographyIsRes = 1
 FlexibleWorldmap = 1
 AutoSearchHidden = 1
+CutsceneAreascripts = 1
+PSTStateFlags = 0
 
 [charset]
 CharCount = 31
@@ -115,4 +117,3 @@ Letter28 = 219,251
 Letter29 = 220,252
 Letter30 = 221,253
 Letter31 = 222,254
-CutsceneAreascripts = 1
