--- a/gemrb/override/pst/gemrb.ini
+++ b/gemrb/override/pst/gemrb.ini
@@ -80,6 +80,8 @@ OnScreenText = 1
 HasSpecificDamageBonus = 0
 HasWisdomBonusTable = 1
 AutoSearchHidden = 1
+CutsceneAreascripts = 1
+PSTStateFlags = 1
 
 [charset]
 CharCount = 31
@@ -114,4 +116,3 @@ Letter28 = 219,251
 Letter29 = 220,252
 Letter30 = 221,253
 Letter31 = 222,254
-CutsceneAreascripts = 1
