--- a/gemrb/override/how/gemrb.ini
+++ b/gemrb/override/how/gemrb.ini
@@ -83,6 +83,8 @@ HasSpecificDamageBonus = 1
 BiographyIsRes = 1
 FlexibleWorldmap = 1
 AutoSearchHidden = 1
+CutsceneAreascripts = 1
+PSTStateFlags = 0
 
 [charset]
 CharCount = 31
@@ -117,4 +119,3 @@ Letter28 = 219,251
 Letter29 = 220,252
 Letter30 = 221,253
 Letter31 = 222,254
-CutsceneAreascripts = 1
