implemented swap-only items in pst

--- a/gemrb/override/pst/gemrb.ini
+++ b/gemrb/override/pst/gemrb.ini
@@ -82,6 +82,7 @@ HasWisdomBonusTable = 1
 AutoSearchHidden = 1
 CutsceneAreascripts = 1
 PSTStateFlags = 1
+NoDropCanMove = 1
 
 [charset]
 CharCount = 31
