added casting sounds

--- a/gemrb/override/bg2/gemrb.ini
+++ b/gemrb/override/bg2/gemrb.ini
@@ -88,3 +88,5 @@ FlexibleWorldmap = 0
 AutoSearchHidden = 1
 PSTStateFlags = 0
 JournalHasSections = 1
+CastingSounds = 1
+EnhancedCastingSounds = 1
