--- a/gemrb/override/iwd/gemrb.ini
+++ b/gemrb/override/iwd/gemrb.ini
@@ -83,6 +83,7 @@ FlexibleWorldmap = 1
 AutoSearchHidden = 1
 CutsceneAreascripts = 1
 PSTStateFlags = 0
+CastingSounds = 1
 
 [charset]
 CharCount = 31
