--- a/gemrb/override/how/gemrb.ini
+++ b/gemrb/override/how/gemrb.ini
@@ -85,6 +85,7 @@ FlexibleWorldmap = 1
 AutoSearchHidden = 1
 CutsceneAreascripts = 1
 PSTStateFlags = 0
+CastingSounds = 1
 
 [charset]
 CharCount = 31
