--- a/gemrb/plugins/GUIScript/CMakeLists.txt
+++ b/gemrb/plugins/GUIScript/CMakeLists.txt
@@ -2,4 +2,4 @@ INCLUDE(FindPythonLibs)
 
 INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
 ADD_GEMRB_PLUGIN (GUIScript GUIScript.cpp PythonHelpers.cpp)
-TARGET_LINK_LIBRARIES( GUIScript ${PYTHON_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} -ldl)
+TARGET_LINK_LIBRARIES(GUIScript ${PYTHON_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS})
