put the chosen paths in the man page (for Ubuntu)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -259,8 +259,15 @@ MACRO(ADD_GEMRB_OVERRIDE game_name)
 	INSTALL( FILES ${FILES_TO_INSTALL} DESTINATION ${DATA_DIR}/override/${game_name} )
 ENDMACRO(ADD_GEMRB_OVERRIDE )
 
+# also put the chosen paths in the man page (Ubuntu)
+CONFIGURE_FILE(
+  "${CMAKE_CURRENT_SOURCE_DIR}/gemrb.6.in"
+  "${CMAKE_CURRENT_BINARY_DIR}/gemrb.6"
+  IMMEDIATE @ONLY
+)
+
 ADD_SUBDIRECTORY( gemrb )
-INSTALL( FILES gemrb.6 DESTINATION ${MAN_DIR} )
+INSTALL( FILES "${CMAKE_CURRENT_BINARY_DIR}/gemrb.6" DESTINATION ${MAN_DIR} )
 INSTALL( FILES artwork/gemrb-logo.png DESTINATION ${ICON_DIR} RENAME gemrb.png )
 INSTALL( FILES artwork/logo04-rb_only.svg DESTINATION ${SVG_DIR} RENAME gemrb.svg )
 INSTALL( FILES gemrb.desktop DESTINATION ${MENU_DIR} )
