cmake: prevent in-source builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,18 @@ endif(COMMAND cmake_policy)
 # allow empty else and endif constructs (available by default since 2.6.0)
 set(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS true)
 
+# prevent in-source builds
+IF(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
+  MESSAGE(FATAL_ERROR "
+    CMake generation for this project is not allowed within the source directory!
+    Remove the CMakeCache.txt file and try again from another folder, e.g.:
+      rm CMakeCache.txt
+      mkdir build
+      cd build
+      cmake .."
+  )
+ENDIF()
+
 # If the user specifies -DCMAKE_BUILD_TYPE on the command line, take their definition
 # and dump it in the cache along with proper documentation, otherwise set CMAKE_BUILD_TYPE
 # to Release prior to calling PROJECT()
