added ForceAreaScript gameflag

--- a/gemrb/override/iwd/gemrb.ini
+++ b/gemrb/override/iwd/gemrb.ini
@@ -84,6 +84,7 @@ AutoSearchHidden = 1
 CutsceneAreascripts = 0
 PSTStateFlags = 0
 CastingSounds = 1
+ForceAreaScript = 1
 
 [charset]
 CharCount = 31
