--- a/gemrb/override/how/gemrb.ini
+++ b/gemrb/override/how/gemrb.ini
@@ -86,6 +86,7 @@ AutoSearchHidden = 1
 CutsceneAreascripts = 0
 PSTStateFlags = 0
 CastingSounds = 1
+ForceAreaScript = 1
 
 [charset]
 CharCount = 31
