if NOCOLOR is defined, don't use colors for the console output; useful for nonblack-bg terminals and silly ides like kdevelop4 (can't display color codes)

--- a/cmake_config.h.in
+++ b/cmake_config.h.in
@@ -12,3 +12,4 @@
 #define PLUGINDIR "${PLUGIN_DIR}"
 #define DATADIR "${DATA_DIR}"
 #define SYSCONFDIR "${SYSCONF_DIR}"
+#cmakedefine NOCOLOR ${NOCOLOR}
