applied Beholder's patch for better touchpad scrolling support plus a switch to cmake (define TOUCHPAD to enable)

--- a/cmake_config.h.in
+++ b/cmake_config.h.in
@@ -13,3 +13,4 @@
 #define DATADIR "${DATA_DIR}"
 #define SYSCONFDIR "${SYSCONF_DIR}"
 #cmakedefine NOCOLOR ${NOCOLOR}
+#cmakedefine TOUCHSCREEN ${TOUCHSCREEN}
