--- a/admin/announcement.template
+++ b/admin/announcement.template
@@ -26,3 +26,6 @@ https://sourceforge.net/news/submit.php?group_id=10122
 ******************** HAPPY PENGUIN ******************
 Visit http://www.happypenguin.org/update?GemRB%3A%20The%20Infinity%20Engine%20Clone
 and insert a shortened NEWS summary (3-10 items)
+
+******************** LGDB ******************
+Visit the project page and submit an update (version only).
