--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -336,5 +336,12 @@ message(STATUS "  ICON_DIR: ${ICON_DIR}")
 message(STATUS "  SVG_DIR: ${SVG_DIR}")
 message(STATUS "  MENU_DIR: ${MENU_DIR}")
 message(STATUS "")
+message(STATUS "Options:")
+message(STATUS "  NOCOLOR: ${NOCOLOR}")
+message(STATUS "  TOUCHSCREEN: ${TOUCHSCREEN}")
+if (STATIC_LINK)
+	message(STATUS "  STATIC_LINK: ${STATIC_LINK}")
+endif()
+message(STATUS "")
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 message(STATUS "")
