cmake: added some more prints

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -337,10 +337,13 @@ message(STATUS "  SVG_DIR: ${SVG_DIR}")
 message(STATUS "  MENU_DIR: ${MENU_DIR}")
 message(STATUS "")
 message(STATUS "Options:")
+message(STATUS "  LAYOUT: ${LAYOUT}")
 message(STATUS "  NOCOLOR: ${NOCOLOR}")
 message(STATUS "  TOUCHSCREEN: ${TOUCHSCREEN}")
 if (STATIC_LINK)
 	message(STATUS "  STATIC_LINK: ${STATIC_LINK}")
+else()
+	message(STATUS "  STATIC_LINK: disabled")
 endif()
 message(STATUS "")
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
