configs: note that the iwd gametype should only be used if how isn't installed

--- a/gemrb/GemRB.cfg.noinstall.sample
+++ b/gemrb/GemRB.cfg.noinstall.sample
@@ -28,7 +28,7 @@
 #  bg1       Baldur's Gate                          #
 #  bg2       Baldur's Gate 2 : SoA or ToB           #
 #  tob       Baldur's Gate 2 : ToB (obsolete)       #
-#  iwd       IceWind Dale                           #
+#  iwd       IceWind Dale (no How or ToTL installed)#
 #  how       IceWind Dale : HoW or ToTL             #
 #  iwd2      IceWind Dale 2                         #
 #  pst       Planescape Torment                     #
