Autodetect GameType if it is set to "auto"
If the GameType is set to 'auto', run Autodetect.py scripts of all gametypes
early during GemRB startup, so that they can change GameType to what they detect.

Set the default GameType to auto
Leave the config files GameType as is for now, but mention 'auto' in the comments

Test for files suggested by Avenger, see
http://www.gemrb.org/wiki/doku.php?id=gametypes

--- a/gemrb/GemRB.cfg.noinstall.sample
+++ b/gemrb/GemRB.cfg.noinstall.sample
@@ -25,6 +25,8 @@
 #  Game Type [String] Use one of the following      #
 #  values:                                          #
 #                                                   #
+#  auto      Attempt to autodetect game type        #
+#                                                   #
 #  bg1       Baldur's Gate                          #
 #  bg2       Baldur's Gate 2 : SoA or ToB           #
 #  tob       Baldur's Gate 2 : ToB (obsolete)       #
