Replace CachedFileStream with SlicedStream.
The only remaining uses of CachedFileStream are for slicing an
existing stream. Make this purpose explicit, and simplify the code.

Signed-off-by: Tom Prince <tom.prince@ualberta.net>

--- a/gemrb/core/CMakeLists.txt
+++ b/gemrb/core/CMakeLists.txt
@@ -24,9 +24,9 @@ FILE(GLOB gemrb_core_LIB_SRCS "*.cpp"
 	Scriptable/Actor.cpp
 	Scriptable/ActorBlock.cpp
 	Scriptable/PCStatStruct.cpp
-	System/CachedFileStream.cpp
 	System/DataStream.cpp
 	System/FileStream.cpp
+	System/SlicedStream.cpp
 	System/MemoryStream.cpp
 	System/VFS.cpp
 	System/snprintf.cpp
