support static linking on mac, patch by Hana Dusíková

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -218,7 +218,7 @@ if(CMAKE_BUILD_TYPE STREQUAL "Release" AND NOT MSVC)
 endif()
 
 if (STATIC_LINK)
-	if (NOT WIN32 AND NOT APPLE)
+	if (NOT WIN32)
 		ADD_DEFINITIONS("-DSTATIC_LINK")
 	else (NOT WIN32 AND NOT APPLE)
 		unset(STATIC_LINK CACHE)
