--- a/gemrb/CMakeLists.txt
+++ b/gemrb/CMakeLists.txt
@@ -12,8 +12,14 @@ IF(WIN32)
  TARGET_LINK_LIBRARIES(gemrb gemrb_core)
 ELSE(WIN32)
  IF(APPLE)
-	 TARGET_LINK_LIBRARIES(gemrb gemrb_core ${SDL_LIBRARY}
-		 ${SDL_MAIN_LIBRARY_PATH} ${COCOA_LIBRARY_PATH} ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
+	if (STATIC_LINK)
+		TARGET_LINK_LIBRARIES(gemrb ${SDL_LIBRARY}
+			 ${SDL_MAIN_LIBRARY_PATH} ${COCOA_LIBRARY_PATH} ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT}
+			 gemrb_core ${plugins}  -Wl,-all_load)
+	else (STATIC_LINK)
+		TARGET_LINK_LIBRARIES(gemrb gemrb_core ${SDL_LIBRARY}
+			 ${SDL_MAIN_LIBRARY_PATH} ${COCOA_LIBRARY_PATH} ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
+	endif (STATIC_LINK)
  ELSE(APPLE)
   if (STATIC_LINK)
 	  TARGET_LINK_LIBRARIES(gemrb ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT}
