HoW movie font, fireball.pro stray bits
Changed HoW movie font to one used at least in CZ version
Removed stray bits 0x04 from fireball.pro travel flags

--- a/gemrb/override/how/gemrb.ini
+++ b/gemrb/override/how/gemrb.ini
@@ -34,7 +34,7 @@ ButtonFont = STONESML
 TooltipFont = TOOLFONT
 
 ; Font used to display subtitles
-MovieFont = REALMS2
+MovieFont = NORMAL
 
 ; Sprite displayed behind the tooltip text, if any
 TooltipBack = TOOLTIP
