--- a/gemrb/core/CMakeLists.txt
+++ b/gemrb/core/CMakeLists.txt
@@ -22,7 +22,7 @@ FILE(GLOB gemrb_core_LIB_SRCS "*.cpp"
 	GUI/Window.cpp
 	GUI/WorldMapControl.cpp
 	Scriptable/Actor.cpp
-	Scriptable/ActorBlock.cpp
+	Scriptable/Scriptable.cpp
 	Scriptable/PCStatStruct.cpp
 	System/CachedFileStream.cpp
 	System/DataStream.cpp
