--- a/gemrb/core/CMakeLists.txt
+++ b/gemrb/core/CMakeLists.txt
@@ -22,6 +22,9 @@ FILE(GLOB gemrb_core_LIB_SRCS "*.cpp"
 	GUI/Window.cpp
 	GUI/WorldMapControl.cpp
 	Scriptable/Actor.cpp
+	Scriptable/Container.cpp
+	Scriptable/Door.cpp
+	Scriptable/InfoPoint.cpp
 	Scriptable/Scriptable.cpp
 	Scriptable/PCStatStruct.cpp
 	System/CachedFileStream.cpp
