--- a/gemrb/core/Makefile.am
+++ b/gemrb/core/Makefile.am
@@ -51,6 +51,7 @@ libgemrb_core_la_SOURCES = \
 	GameScript/Objects.cpp \
 	GameScript/Triggers.cpp \
 	GlobalTimer.cpp \
+	FileCache.cpp \
 	Image.cpp \
 	ImageFactory.cpp \
 	ImageMgr.cpp \
@@ -99,10 +100,9 @@ libgemrb_core_la_SOURCES = \
 	StoreMgr.cpp \
 	StringMgr.cpp \
 	SymbolMgr.cpp \
-	System/CachedFileStream.cpp \
 	System/DataStream.cpp \
 	System/FileStream.cpp \
-	System/MemoryStream.cpp \
+	System/SlicedStream.cpp \
 	System/VFS.cpp \
 	TableMgr.cpp \
 	Tile.cpp \
