--- a/admin/announcement.template
+++ b/admin/announcement.template
@@ -6,7 +6,6 @@ The [url=http://gemrb.sf.net]GemRB[/url] team is proud to announce a new (minor)
 (short description of major changes)
 
 Currently only the sources are available. You can get them [url=http://sourceforge.net/project/showfiles.php?group_id=10122]here[/url].
-http://sourceforge.net/project/showfiles.php?group_id=10122]here[/url].
 
 Full changelog digest:
 [code]
@@ -28,4 +27,6 @@ Visit http://www.happypenguin.org/update?GemRB%3A%20The%20Infinity%20Engine%20Cl
 and insert a shortened NEWS summary (3-10 items)
 
 ******************** LGDB ******************
-Visit the project page and submit an update (version only).
+http://www.lgdb.org/game/gemrb
+Visit the project page and submit an update (version, changelog). Choose
+"edit cuurent" on the top and scroll through the form to get to the relevant part.
