cmake: Fix warning on non-matching IF()/ENDIF().
Signed-off-by: Tom Prince <tom.prince@ualberta.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -221,10 +221,10 @@ endif()
 if (STATIC_LINK)
 	if (NOT WIN32)
 		ADD_DEFINITIONS("-DSTATIC_LINK")
-	else (NOT WIN32 AND NOT APPLE)
+	else (NOT WIN32)
 		unset(STATIC_LINK CACHE)
 		MESSAGE(STATUS "Static linking not (yet) supported on this platform.")
-	endif (NOT WIN32 AND NOT APPLE)
+	endif (NOT WIN32)
 endif (STATIC_LINK)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} gemrb/includes gemrb/core)
