--- a/gemrb/core/CMakeLists.txt
+++ b/gemrb/core/CMakeLists.txt
@@ -29,6 +29,7 @@ FILE(GLOB gemrb_core_LIB_SRCS "*.cpp"
 	Scriptable/PCStatStruct.cpp
 	System/DataStream.cpp
 	System/FileStream.cpp
+	System/Logging.cpp
 	System/SlicedStream.cpp
 	System/VFS.cpp
 	System/snprintf.cpp
