cmake: also display the value of INSOURCEBUILD

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -351,6 +351,7 @@ message(STATUS "  LAYOUT: ${LAYOUT}")
 PRINT_OPTION("${NOCOLOR}" "NOCOLOR")
 PRINT_OPTION("${TOUCHSCREEN}" "TOUCHSCREEN")
 PRINT_OPTION("${STATIC_LINK}" "STATIC_LINK")
+PRINT_OPTION("${INSOURCEBUILD}" "INSOURCEBUILD")
 message(STATUS "")
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 message(STATUS "")
