PluginMgr: Split off plugin loading from plugin registry.
This also removes almost unused code for unloading plugins.

Signed-off-by: Tom Prince <tom.prince@ualberta.net>

--- a/gemrb/core/CMakeLists.txt
+++ b/gemrb/core/CMakeLists.txt
@@ -49,6 +49,7 @@ FILE(GLOB gemrb_core_LIB_SRCS
 	PalettedImageMgr.cpp
 	Particles.cpp
 	Plugin.cpp
+	PluginLoader.cpp
 	PluginMgr.cpp
 	Polygon.cpp
 	Projectile.cpp
