cmake: Don't use globbing to grab files in core.
Signed-off-by: Tom Prince <tom.prince@ualberta.net>

--- a/gemrb/core/CMakeLists.txt
+++ b/gemrb/core/CMakeLists.txt
@@ -1,6 +1,89 @@
 ADD_DEFINITIONS(-DGEM_BUILD_DLL)
 
-FILE(GLOB gemrb_core_LIB_SRCS "*.cpp"
+FILE(GLOB gemrb_core_LIB_SRCS
+	ActorMgr.cpp
+	Ambient.cpp
+	AmbientMgr.cpp
+	Animation.cpp
+	AnimationFactory.cpp
+	AnimationMgr.cpp
+	ArchiveImporter.cpp
+	Audio.cpp
+	Bitmap.cpp
+	Cache.cpp
+	Calendar.cpp
+	Callback.cpp
+	CharAnimations.cpp
+	Compressor.cpp
+	ControlAnimation.cpp
+	Core.cpp
+	DataFileMgr.cpp
+	Dialog.cpp
+	DialogHandler.cpp
+	DialogMgr.cpp
+	DisplayMessage.cpp
+	EffectMgr.cpp
+	EffectQueue.cpp
+	Factory.cpp
+	FactoryObject.cpp
+	FileCache.cpp
+	Font.cpp
+	Game.cpp
+	GameData.cpp
+	GlobalTimer.cpp
+	Image.cpp
+	ImageFactory.cpp
+	ImageMgr.cpp
+	ImageWriter.cpp
+	IniSpawn.cpp
+	Interface.cpp
+	Inventory.cpp
+	Item.cpp
+	ItemMgr.cpp
+	LRUCache.cpp
+	Map.cpp
+	MapMgr.cpp
+	MoviePlayer.cpp
+	MusicMgr.cpp
+	Palette.cpp
+	PalettedImageMgr.cpp
+	Particles.cpp
+	Plugin.cpp
+	PluginMgr.cpp
+	Polygon.cpp
+	Projectile.cpp
+	ProjectileMgr.cpp
+	ProjectileServer.cpp
+	Region.cpp
+	Resource.cpp
+	ResourceDesc.cpp
+	ResourceManager.cpp
+	ResourceSource.cpp
+	SaveGameIterator.cpp
+	SaveGameMgr.cpp
+	ScriptEngine.cpp
+	ScriptedAnimation.cpp
+	SoundMgr.cpp
+	Spell.cpp
+	SpellMgr.cpp
+	Spellbook.cpp
+	Sprite2D.cpp
+	SpriteCover.cpp
+	Store.cpp
+	StoreMgr.cpp
+	StringMgr.cpp
+	SymbolMgr.cpp
+	TableMgr.cpp
+	Tile.cpp
+	TileMap.cpp
+	TileMapMgr.cpp
+	TileOverlay.cpp
+	TileSetMgr.cpp
+	Variables.cpp
+	Video.cpp
+	WindowMgr.cpp
+	WorldMap.cpp
+	WorldMapMgr.cpp
 	GameScript/Actions.cpp
 	GameScript/GSUtils.cpp
 	GameScript/GameScript.cpp
