Split BIFImporter and SAVImporter.
The file formats are different, and they share no implementation.

Signed-off-by: Tom Prince <tom.prince@ualberta.net>

--- a/gemrb/core/CMakeLists.txt
+++ b/gemrb/core/CMakeLists.txt
@@ -35,6 +35,7 @@ FILE(GLOB gemrb_core_LIB_SRCS
 	ImageFactory.cpp
 	ImageMgr.cpp
 	ImageWriter.cpp
+	IndexedArchive.cpp
 	IniSpawn.cpp
 	Interface.cpp
 	Inventory.cpp
