--- a/gemrb/plugins/CMakeLists.txt
+++ b/gemrb/plugins/CMakeLists.txt
@@ -29,6 +29,7 @@ ADD_SUBDIRECTORY( PLTImporter )
 ADD_SUBDIRECTORY( PNGImporter )
 ADD_SUBDIRECTORY( PROImporter )
 ADD_SUBDIRECTORY( PSTOpcodes )
+ADD_SUBDIRECTORY( SAVImporter )
 ADD_SUBDIRECTORY( SDLAudio )
 ADD_SUBDIRECTORY( SDLVideo )
 ADD_SUBDIRECTORY( SPLImporter )
