--- a/gemrb/GemRB.cfg.noinstall.sample
+++ b/gemrb/GemRB.cfg.noinstall.sample
@@ -104,7 +104,7 @@ TooltipDelay=500
 
 #CaseSensitive=1
 
-#GameOnCD=0
+#SlowBIFs=0
 
 #####################################################
 #  GUI Parameters                                   #
