significantly reduce the memory footprint on systems with glibc
glibc only resizes the heap if it has more than 128KB of free space at the
end, but many objects are smaller, so fragmentation occurs. This change
tunes the limit down, resulting in much more reclaim.

--- a/cmake_config.h.in
+++ b/cmake_config.h.in
@@ -11,3 +11,5 @@
 #define SYSCONFDIR "${SYSCONF_DIR}"
 #cmakedefine NOCOLOR ${NOCOLOR}
 #cmakedefine TOUCHSCREEN ${TOUCHSCREEN}
+#cmakedefine HAVE_MALLOC_H 1
+#cmakedefine HAVE_UNISTD_H 1
