--- a/gemrb.6.in
+++ b/gemrb.6.in
@@ -69,6 +69,12 @@ more than once, only the last occurence is used.
 
 Empty lines and lines starting with `#' (hash sign) are ignored.
 
+At least the
+.I GameType
+and 
+.I GamePath
+parameters need to be changed. That is often enough, so do not fiddle with the other paths too much.
+
 .SH General Parameters:
 
 .TP
@@ -132,7 +138,7 @@ The default is
 
 .TP
 .BR SkipIntroVideos =(0|1)
-This parameter is meant for developers. If set to
+If set to
 .IR 1 ,
 the intro and logo videos are skipped to save developer's nerves. The default is
 .IR 0 .
@@ -211,7 +217,7 @@ program found at
 .BR CD2 =PATH
 .TP
 .BR CDn =...
-Path to the data files for the game's particular CDs.
+Path to the data files for the game's particular CDs or any other data sources.
 
 .TP
 .BR GameOnCD =(0|1)
@@ -221,7 +227,7 @@ defaults to
 .TP
 .BR CachePath =PATH
 User-writable directory where the engine caches uncompressed and temporary
-files.
+files. Defaults to a subdirectory of the current directory.
 
 .TP
 .BR GemRBPath =PATH
@@ -229,14 +235,17 @@ Path to the GemRB installation. (To be obsoleted; preset at build time).
 
 .TP
 .BR GUIScriptsPath =PATH
-Path to the directory with scripts controlling the game's GUI. 
+Path to the directory with scripts controlling the game's GUI. (To be obsoleted; preset at build time).
 
 .TP
 .BR GemRBOverridePath =PATH
 Path where GemRB looks for its game override directory.
 It defaults to
 .IR GemRBPath .
-The original games hardcoded this information in the engine.
+The original games hardcoded this information in the engine. (To be obsoleted; preset at build time).
+
+.TP
+.I The following variables do not need to be altered, unless you are doing something really special!
 
 .TP
 .BR SavePath =PATH
@@ -421,17 +430,17 @@ Many.
 is still in an early development stage and not nearly complete. 
 
 If you stumble over something which is supposed to work, either make a bug report
-at http://sourceforge.net/projects/gemrb or come to IRC channel 
+at http://sourceforge.net/projects/gemrb or come to the official IRC channel 
 .I #GemRB
 at FreeNode.
 
 .\"###################################################
 .SH AUTHOR
-The GemRB Project development team at http://gemrb.sourceforge.net
+The GemRB Project development team at http://gemrb.org
 
 .\"###################################################
 .SH COPYING
-Copyright (C) 2003-2008 The GemRB Project
+Copyright (C) 2003-2011 The GemRB Project
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
