Adds new options for TouchScrollAreas ad UseSoftKeyboard to config.
Signed-off-by: Brad Allred <bradallred@me.com>

--- a/gemrb/GemRB.cfg.noinstall.sample
+++ b/gemrb/GemRB.cfg.noinstall.sample
@@ -252,5 +252,15 @@ PluginsPath=./gemrb/plugins/
 #GemRBOverridePath=/usr/share/games/gemrb
 
 #####################################################
+#  Input Parameters                                 #
+#####################################################
+
+#whether or not to use software keyboard on devices that support one
+#UseSoftKeyboard=1
+
+#Adds a gutter around the screen for scrolling
+#TouchScrollAreas=1
+
+#####################################################
 #  END                                              #
 #####################################################
