--- a/gemrb/GemRB.cfg.sample.in
+++ b/gemrb/GemRB.cfg.sample.in
@@ -264,5 +264,15 @@ CachePath=./Cache/
 #GemRBOverridePath=@DATA_DIR@
 
 #####################################################
+#  Input Parameters                                 #
+#####################################################
+
+#whether or not to use software keyboard on devices that support one
+#UseSoftKeyboard=1
+
+#Adds a gutter around the screen for scrolling
+#TouchScrollAreas=1
+
+#####################################################
 #  END                                              #
 #####################################################
