CMakeLists.txt: also show the value of DISABLE_WERROR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -355,6 +355,7 @@ PRINT_OPTION("${NOCOLOR}" "NOCOLOR")
 PRINT_OPTION("${TOUCHSCREEN}" "TOUCHSCREEN")
 PRINT_OPTION("${STATIC_LINK}" "STATIC_LINK")
 PRINT_OPTION("${INSOURCEBUILD}" "INSOURCEBUILD")
+PRINT_OPTION("${DISABLE_WERROR}" "DISABLE_WERROR")
 message(STATUS "")
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 message(STATUS "")
